finished two sections

--- a/index.html
+++ b/index.html
@@ -11,10 +11,131 @@
 <body>
 
     <header>
+        <div class="container-fluid p-0">
+            <nav class="navbar navbar-expand-lg ">
+                <a class="navbar-brand" href="#">Books</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="mr-auto"></div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Course</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Price</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <div class="dropdown">
+                                <a href="#" class="nav-link">Pages</a>
+                                <div class="dropdown-content">
+                                    <a href="#">Generic</a>
+                                    <a href="#">Element</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Fact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-md-7 col-sm-12">
+                    <h6>AUTHOR: NCUX</h6>
+                    <h1>CUM JOIN US!</h1>
+                    <p>
+                        If you're telling women what to wear, whether it's more clothes or fewer clothes, you are oppressing women.
+                        It stems from the same sexist impulse to make a woman's body the property of the state and dictate what she does with it.
+                    </p>
+                    <button class="btn btn-light px-5 py-2">Get it now for $2.50</button>
+                </div>
+
+                <div class="col-md-5 col-sm-12 h-25">
+                    <img src="assets/images/header-img.png" alt="Header image">
+                </div>
+            </div>
+
+        </div>
 
     </header>
 
     <main>
+
+        <section class="section-1">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="pray">
+                            <img src="assets/images/pexels-photo-1904769.jpeg" alt="Pray">
+                        </div>
+                    </div>
+                    
+                    <div class="col-md-6">
+                        <div class="panel text-left">
+                            <h1>John Doe</h1>
+                            <p class="pt-4">
+                                None, he's talking out of his ass as usual in these kind of threads, Germany, Switzerland and Austria also have a similar birthrate to Japan
+                                and all three have a good, well known working culture with plenty of time off to do other stuff. Only major difference between all these
+                                European states and Japan is that they all gave in to immigration much much earlier than Japan and currently they all stand at between 14
+                                to 22% of foreign born population each. Japan started opening a bit and making things easier less than a decade ago so their growing foreign
+                                born population stands at a mere 2%.
+                            </p>
+                            <p>
+                                Well I think having no time for yourself can be more attributed to the insane work culture they have, in addition they have a bit of a
+                                discrimination issue against women with children. (even moreso than just in general) so I feel many women think it's a choice between kids or career.
+                                Not saying these are the only reasons for a low birthrate but they are definitely up there.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-2 container-fluid p-0">
+            <div class="cover">
+                <div class="content text-center">
+                    <h1>We Are Ready For You!</h1>
+                    <p>If that's a crime? Should the police chief be guilty as well? Is he not the one who gave the order to lob 150 tear gas grenades on peaceful protesters?</p>
+                </div>
+            </div>
+
+            <div class="container-fluid text-center">
+                <div class="number-boxes d-flex flex-md-row flex-wrap justify-content-center">
+                    <div class="rectangle">
+                        <h1>1403</h1>
+                        <p>Sexy Lady</p>
+                    </div>
+                    <div class="rectangle">
+                        <h1>9647</h1>
+                        <p>Horny Woman</p>
+                    </div>
+                    <div class="rectangle">
+                        <h1>0158</h1>
+                        <p>Bad Female</p>
+                    </div>
+                    <div class="rectangle">
+                        <h1>3278</h1>
+                        <p>Ready Cunt</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="section-3">
+
+        </section>
 
     </main>
 
