all sections done; footer remaining

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <title>Responsive-Bootstrap-Website-2</title>
@@ -131,15 +132,212 @@
                 </div>
             </div>
 
+            <div class="purchase text-center">
+                <h1>Purchase Whatever You Want</h1>
+                <p>This can be a handy feature when you want to keep multiple copies of huge repos, w/o burning up a lot of disk space.</p>
+                <div class="cards">
+
+                    <div class="row d-flex flex-row justify-content-center">
+                        <div class="card col-md-4 col-sm-12">
+                            <div class="card-body">
+                                <div class="title">
+                                    <h5 class="card-title">PDF</h5>
+                                </div>
+                                <p class="card-text">Hope that judge has good security. Capitalists hate it when you mess with the profit margins.</p>
+                                <div class="pricing">
+                                    <h1>$12.49</h1>
+                                    <a href="#" class="btn btn-dark px-5">Purchase now</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card col-md-4 col-sm-12">
+                            <div class="card-body">
+                                <div class="title">
+                                    <h5 class="card-title">E-book</h5>
+                                </div>
+                                <p class="card-text">Taking private land or business and giving it to a ministry of the government is as socialist as socialist can be.</p>
+                                <div class="pricing">
+                                    <h1>16.49</h1>
+                                    <a href="#" class="btn btn-dark px-5">Purchase now</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card col-md-4 col-sm-12">
+                            <div class="card-body">
+                                <div class="title">
+                                    <h5 class="card-title">Hard Copy</h5>
+                                </div>
+                                <p class="card-text">It's been the courts defending against encroachment by the far right. The importance of judicial independence indeed.</p>
+                                <div class="pricing">
+                                    <h1>$28.49</h1>
+                                    <a href="#" class="btn btn-dark px-5">Purchase now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         </section>
 
-        <section class="section-3">
+
+        <section class="section-3 container-fluid p-0 text-center">
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <h1>Download Our App Now!</h1>
+                    <p>
+                        Not to mention these days there are no real benefits to having nuclear weapons. If you are in a position
+                        where using them is your only option, knowing that the retaliation would be equal or greater to your own attack,
+                        you have already lost the war.
+                    </p>
+                </div>
+            </div>
+
+            <div class="platform row">
+                <div class="col-md-6 col-sm-12 text-right">
+                    <div class="desktop shadow-lg">
+                        <div class="d-flex flex-row justify-content-center">
+                            <i class="fas fa-desktop pr-3 py-2 fa-3x"></i>
+                            <div class="text text-left">
+                                <h3 class="pt-1 m-0">Desktop</h3>
+                                <p class="p-0 m-0">Desktop Website</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-sm-12 text-left">
+                    <div class="desktop shadow-lg">
+                        <div class="d-flex flex-row justify-content-center">
+                            <i class="fas fa-mobile-alt pr-3 py-2 fa-3x"></i>
+                            <div class="text text-left">
+                                <h3 class="pt-1 m-0">Mobile</h3>
+                                <p class="p-0 m-0">Mobile Website</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-4">
+            <div class="container text-center">
+                <h1 class="text-dark">Reader Opinions</h1>
+                <p class="text-secondary">So if anyone can help me out, it'll be greatly appreciated!</p>
+            </div>
+
+            <div class="team row">
+                <div class="col-md-4 col-sm-12 text-center">
+                            <!--        card 1            -->
+                    <div class="card mr-2 d-inline-block shadow-lg">
+                        <div class="card-img-top">
+                            <img src="assets/images/UI-face-3.jpg" alt="Member 3" class="img-fluid">
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">Abdule Lolo</h3>
+                            <p class="card-text">
+                                It looks like so far I qualify according to what I've read online.
+                                My concern is this: he is a Holocaust survivor and his original birth certificate was lost/destroyed.
+                                Does anyone have experience looking for documents for family members who were in the same situation?
+                                Can I expect a Polish representative to be able to find Polish documents proving his citizenship?
+                            </p>
+                            <a href="#" class="text-secondary text-decoration-none">Go there</a>
+                            <p class="text-black-50">CEO at Xiolot</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-12">
+                                            <!--       Carousel             -->
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active text-center">
+                                                <!-- Card 2-->
+                                <div class="card mr-2 d-inline-block shadow-lg">
+                                    <div class="card-img-top">
+                                        <img src="assets/images/UI-face-1.jpg" alt="Member 3" class="img-fluid">
+                                    </div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">Linda Moyo</h3>
+                                        <p class="card-text">
+                                            This is exactly why those in power will never be the ones to mitigate climate change. It has to come from the bottom up.
+                                            The rich will be content paying their way through a normal quality of life while the rule of law around them crumbles, t
+                                            hen they'll have even more freedoms and power than they do now. Voters need to wake up.
+                                            I grew up in a poor Republican household and started seeing the scam when I was 16. It's not hard.
+                                        </p>
+                                        <a href="#" class="text-secondary text-decoration-none">Go there</a>
+                                        <p class="text-black-50">CEO at Memin</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="carousel-item text-center">
+                                        <!--    Card 3        -->
+                                <div class="card mr-2 d-inline-block shadow-lg">
+                                    <div class="card-img-top">
+                                        <img src="assets/images/UI-face-2.jpg" alt="Member 3" class="img-fluid">
+                                    </div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">George Ncube</h3>
+                                        <p class="card-text">
+                                            This is exactly why those in power will never be the ones to mitigate climate change. It has to come from the bottom up.
+                                            The rich will be content paying their way through a normal quality of life while the rule of law around them crumbles, t
+                                            hen they'll have even more freedoms and power than they do now. Voters need to wake up.
+                                            I grew up in a poor Republican household and started seeing the scam when I was 16. It's not hard.
+                                        </p>
+                                        <a href="#" class="text-secondary text-decoration-none">Go there</a>
+                                        <p class="text-black-50">CEO at Memin</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-12 text-center">
+                    <!--        Card 4            -->
+                    <div class="card mr-2 d-inline-block shadow-lg">
+                        <div class="card-img-top">
+                            <img src="assets/images/UI-face-4.jpg" alt="Member 3" class="img-fluid">
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">Jennifer Ndlovu</h3>
+                            <p class="card-text">
+                                I understand Tier 2 visas are very difficult to obtain, especially from outside the UK. Is it worth it for me to study in the UK instead?
+                                I've completed a single semester here, and in order to continue in the UK, I'd need to scrap my studies and start over.
+                                Furthermore, the university which accepted me in the UK wants me to start with a foundation course which will take one year.
+                            </p>
+                            <a href="#" class="text-secondary text-decoration-none">Go there</a>
+                            <p class="text-black-50">CEO at Sethil</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
 
         </section>
 
     </main>
 
     <footer>
+
+        <div class="container-fluid p-0">
+            <div class="row text-left">
+                <div class="col-md-5 col-sm-12">
+                    <h1 class="text-light">About Us</h1>
+                    <p></p>
+                </div>
+                <div class="col-md-5 col-sm-12">
+
+                </div>
+                <div class="col-md-2">
+
+                </div>
+            </div>
+        </div>
 
     </footer>
 
