working on the footer

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             <div class="row text-left">
                 <div class="col-md-5 col-sm-12">
                     <h1 class="text-light">About Us</h1>
-                    <p></p>
+                    <p>Thanks for sharing! Mind elaborating on what type of company you work for, and what you do as a field engineer?</p>
                 </div>
                 <div class="col-md-5 col-sm-12">
 
