--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -12,6 +13,7 @@
 <body>
 
     <header>
+        <!--   fot the nav     -->
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg ">
                 <a class="navbar-brand" href="#">Books</a>
@@ -50,6 +52,7 @@
             </nav>
         </div>
 
+        <!--   other text in the header     -->
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-7 col-sm-12">
@@ -68,7 +71,6 @@
             </div>
 
         </div>
-
     </header>
 
     <main>
@@ -104,6 +106,7 @@
         </section>
 
         <section class="section-2 container-fluid p-0">
+            <!--    "we are ready for you" heading        -->
             <div class="cover">
                 <div class="content text-center">
                     <h1>We Are Ready For You!</h1>
@@ -112,6 +115,7 @@
             </div>
 
             <div class="container-fluid text-center">
+                <!--      number boxes div          -->
                 <div class="number-boxes d-flex flex-md-row flex-wrap justify-content-center">
                     <div class="rectangle">
                         <h1>1403</h1>
@@ -135,6 +139,7 @@
             <div class="purchase text-center">
                 <h1>Purchase Whatever You Want</h1>
                 <p>This can be a handy feature when you want to keep multiple copies of huge repos, w/o burning up a lot of disk space.</p>
+                    <!--    book cards    -->
                 <div class="cards">
 
                     <div class="row d-flex flex-row justify-content-center">
@@ -183,7 +188,7 @@
 
         </section>
 
-
+            <!--"Download our app now" section-->
         <section class="section-3 container-fluid p-0 text-center">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
@@ -223,6 +228,7 @@
             </div>
         </section>
 
+        <!--    CARDS with CEOs    -->
         <section class="section-4">
             <div class="container text-center">
                 <h1 class="text-dark">Reader Opinions</h1>
@@ -322,20 +328,47 @@
 
     </main>
 
+
     <footer>
 
         <div class="container-fluid p-0">
             <div class="row text-left">
+
                 <div class="col-md-5 col-sm-12">
                     <h1 class="text-light">About Us</h1>
-                    <p>Thanks for sharing! Mind elaborating on what type of company you work for, and what you do as a field engineer?</p>
+                    <p class="text-muted">Thanks for sharing! Mind elaborating on what type of company you work for, and what you do as a field engineer?</p>
+                    <p class="text-muted pt-4">&copy; 2019 <a href="https://github.com/ncux" target="_blank">ncux</a> | All Rights Reserved!</p>
                 </div>
+
                 <div class="col-md-5 col-sm-12">
-
+                    <h4 class="text-light">Newsletter</h4>
+                    <p class="text-muted">Stay up to date: enter your email address below to subscribe!</p>
+                    <form class="form-inline">
+                        <div class="col pl-0">
+                            <div class="input-group pr-5">
+                                <input placeholder="Email address" class="form-control bg-dark text-white">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">
+                                        <i class="fas fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <div class="col-md-2">
 
+                <div class="col-md-2 col-sm-12">
+                    <h4 class="text-light">Social Links</h4>
+                    <p class="text-muted"></p>
+                    <div class="column">
+                        <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-snapchat-ghost"></i></a>
+                        <a href="#"><i class="fab fa-telegram"></i></a>
+                    </div>
                 </div>
+
             </div>
         </div>
 
