--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
 
     <header>
-        <!--   fot the nav     -->
+        <!--   for the nav     -->
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg ">
-                <a class="navbar-brand" href="#">Books</a>
+                <a class="navbar-brand" href="#"><i class="fas fa-book-open"></i> Books</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -69,7 +69,6 @@
                     <img src="assets/images/header-img.png" alt="Header image">
                 </div>
             </div>
-
         </div>
     </header>
 
@@ -78,6 +77,7 @@
         <section class="section-1">
             <div class="container text-center">
                 <div class="row">
+
                     <div class="col-md-6">
                         <div class="pray">
                             <img src="assets/images/pexels-photo-1904769.jpeg" alt="Pray">
@@ -101,6 +101,7 @@
                             </p>
                         </div>
                     </div>
+
                 </div>
             </div>
         </section>
@@ -134,6 +135,7 @@
                         <p>Ready Cunt</p>
                     </div>
                 </div>
+
             </div>
 
             <div class="purchase text-center">
