working on the footer

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             </div>
 
             <div class="platform row">
+
                 <div class="col-md-6 col-sm-12 text-right">
                     <div class="desktop shadow-lg">
                         <div class="d-flex flex-row justify-content-center">
@@ -227,11 +228,13 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </section>
 
-        <!--    CARDS with CEOs    -->
         <section class="section-4">
+            <!--    CARDS with CEOs    -->
+
             <div class="container text-center">
                 <h1 class="text-dark">Reader Opinions</h1>
                 <p class="text-secondary">So if anyone can help me out, it'll be greatly appreciated!</p>
@@ -242,7 +245,7 @@
                             <!--        card 1            -->
                     <div class="card mr-2 d-inline-block shadow-lg">
                         <div class="card-img-top">
-                            <img src="assets/images/UI-face-3.jpg" alt="Member 3" class="img-fluid">
+                            <img src="assets/images/UI-face-3.jpg" alt="Member 3" class="img-fluid profile-images">
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">Abdule Lolo</h3>
@@ -252,8 +255,8 @@
                                 Does anyone have experience looking for documents for family members who were in the same situation?
                                 Can I expect a Polish representative to be able to find Polish documents proving his citizenship?
                             </p>
-                            <a href="#" class="text-secondary text-decoration-none">Go there</a>
                             <p class="text-black-50">CEO at Xiolot</p>
+                            <a href="#" class="text-secondary text-decoration-none">Go there</a>
                         </div>
                     </div>
                 </div>
@@ -266,7 +269,7 @@
                                                 <!-- Card 2-->
                                 <div class="card mr-2 d-inline-block shadow-lg">
                                     <div class="card-img-top">
-                                        <img src="assets/images/UI-face-1.jpg" alt="Member 3" class="img-fluid">
+                                        <img src="assets/images/UI-face-1.jpg" alt="Member 3" class="img-fluid profile-images">
                                     </div>
                                     <div class="card-body">
                                         <h3 class="card-title">Linda Moyo</h3>
@@ -276,8 +279,8 @@
                                             hen they'll have even more freedoms and power than they do now. Voters need to wake up.
                                             I grew up in a poor Republican household and started seeing the scam when I was 16. It's not hard.
                                         </p>
-                                        <a href="#" class="text-secondary text-decoration-none">Go there</a>
                                         <p class="text-black-50">CEO at Memin</p>
+                                        <a href="#" class="text-secondary text-decoration-none">Go there</a>
                                     </div>
                                 </div>
                             </div>
@@ -286,7 +289,7 @@
                                         <!--    Card 3        -->
                                 <div class="card mr-2 d-inline-block shadow-lg">
                                     <div class="card-img-top">
-                                        <img src="assets/images/UI-face-2.jpg" alt="Member 3" class="img-fluid">
+                                        <img src="assets/images/UI-face-2.jpg" alt="Member 3" class="img-fluid profile-images">
                                     </div>
                                     <div class="card-body">
                                         <h3 class="card-title">George Ncube</h3>
@@ -296,8 +299,8 @@
                                             hen they'll have even more freedoms and power than they do now. Voters need to wake up.
                                             I grew up in a poor Republican household and started seeing the scam when I was 16. It's not hard.
                                         </p>
-                                        <a href="#" class="text-secondary text-decoration-none">Go there</a>
                                         <p class="text-black-50">CEO at Memin</p>
+                                        <a href="#" class="text-secondary text-decoration-none">Go there</a>
                                     </div>
                                 </div>
                             </div>
@@ -309,7 +312,7 @@
                     <!--        Card 4            -->
                     <div class="card mr-2 d-inline-block shadow-lg">
                         <div class="card-img-top">
-                            <img src="assets/images/UI-face-4.jpg" alt="Member 3" class="img-fluid">
+                            <img src="assets/images/UI-face-4.jpg" alt="Member 3" class="img-fluid profile-images">
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">Jennifer Ndlovu</h3>
@@ -318,8 +321,8 @@
                                 I've completed a single semester here, and in order to continue in the UK, I'd need to scrap my studies and start over.
                                 Furthermore, the university which accepted me in the UK wants me to start with a foundation course which will take one year.
                             </p>
-                            <a href="#" class="text-secondary text-decoration-none">Go there</a>
                             <p class="text-black-50">CEO at Sethil</p>
+                            <a href="#" class="text-secondary text-decoration-none">Go there</a>
                         </div>
                     </div>
                 </div>
