desktop version is done

--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
                     
                     <div class="col-md-6">
                         <div class="panel text-left">
-                            <h1>John Doe</h1>
-                            <p class="pt-4">
+                            <h1 class="text-center">John Doe</h1>
+                            <p class="pt-4 text-justify">
                                 None, he's talking out of his ass as usual in these kind of threads, Germany, Switzerland and Austria also have a similar birthrate to Japan
                                 and all three have a good, well known working culture with plenty of time off to do other stuff. Only major difference between all these
                                 European states and Japan is that they all gave in to immigration much much earlier than Japan and currently they all stand at between 14
                                 to 22% of foreign born population each. Japan started opening a bit and making things easier less than a decade ago so their growing foreign
                                 born population stands at a mere 2%.
                             </p>
-                            <p>
+                            <p class="text-justify">
                                 Well I think having no time for yourself can be more attributed to the insane work culture they have, in addition they have a bit of a
                                 discrimination issue against women with children. (even moreso than just in general) so I feel many women think it's a choice between kids or career.
                                 Not saying these are the only reasons for a low birthrate but they are definitely up there.
@@ -211,7 +211,7 @@
                             <i class="fas fa-desktop pr-3 py-2 fa-3x"></i>
                             <div class="text text-left">
                                 <h3 class="pt-1 m-0">Desktop</h3>
-                                <p class="p-0 m-0">Desktop Website</p>
+                                <p class="py-1 m-0">Desktop Website</p>
                             </div>
                         </div>
                     </div>
@@ -220,10 +220,10 @@
                 <div class="col-md-6 col-sm-12 text-left">
                     <div class="desktop shadow-lg">
                         <div class="d-flex flex-row justify-content-center">
-                            <i class="fas fa-mobile-alt pr-3 py-2 fa-3x"></i>
+                            <i class="fas fa-mobile-alt pl-4 pr-3 py-2 fa-3x"></i>
                             <div class="text text-left">
                                 <h3 class="pt-1 m-0">Mobile</h3>
-                                <p class="p-0 m-0">Mobile Website</p>
+                                <p class="py-1 m-0">Mobile Website</p>
                             </div>
                         </div>
                     </div>
@@ -340,14 +340,14 @@
             <div class="row text-left">
 
                 <div class="col-md-5 col-sm-12">
-                    <h1 class="text-light">About Us</h1>
-                    <p class="text-muted">Thanks for sharing! Mind elaborating on what type of company you work for, and what you do as a field engineer?</p>
-                    <p class="text-muted pt-4">&copy; 2019 <a href="https://github.com/ncux" target="_blank">ncux</a> | All Rights Reserved!</p>
+                    <h4 class="text-light px-4">About Us</h4>
+                    <p class="text-muted pt-2 px-4">Thanks for sharing! Mind elaborating on what type of company you work for, and what you do as a field engineer?</p>
+                    <p class="text-muted pt-2 px-4">&copy; 2019 <a href="https://github.com/ncux" target="_blank">ncux</a> | All Rights Reserved!</p>
                 </div>
 
                 <div class="col-md-5 col-sm-12">
                     <h4 class="text-light">Newsletter</h4>
-                    <p class="text-muted">Stay up to date: enter your email address below to subscribe!</p>
+                    <p class="text-muted pt-2">Stay up to date: enter your email address below to subscribe!</p>
                     <form class="form-inline">
                         <div class="col pl-0">
                             <div class="input-group pr-5">
@@ -364,7 +364,7 @@
 
                 <div class="col-md-2 col-sm-12">
                     <h4 class="text-light">Social Links</h4>
-                    <p class="text-muted"></p>
+                    <p class="text-muted pt-2">Follow us</p>
                     <div class="column">
                         <a href="#"><i class="fab fa-google-plus-g"></i></a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
